# faest-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  test_with_valgrind.sh
.github/workflows/: build.yaml
benches/: bench.rs  benchmark_faest_rs.rs
examples/: simple.rs
faest/: Cargo.toml  README.md  perf.data  perf.data.old
faest-benches/: Cargo.toml
faest-benches/benches/: bench.rs
faest-memcheck/: api_test.rs  test_with_valgrind.sh
faest/benches/: benchmark_faest_rs.rs
faest/examples/: simple.rs
faest/src/: aes.rs  aes_test.rs  backup-main.rs  em.rs  em_test.rs  faest.rs  faest_test.rs  fields.rs  fields_test.rs  lib.rs  main.rs  parameter.rs  prg.rs  prg_test.rs  random_oracles.rs  random_oracles_test.rs  rijndael_32.rs  rijndael_32_test.rs  signature.rs  test.rs  universal_hashing.rs  universal_hashing_test.rs  utils.rs  vc.rs  vc_test.rs  vole.rs  vole_test.rs
faest/src/fields/: large_fields.rs  mod.rs  small_fields.rs
faest/tests/: integration_test_vc.rs  integration_test_vole.rs
src/: aes.rs  bavc.rs  capi.rs  em.rs  faest.rs  faest_memcheck.rs  internal_keys.rs  lib.rs  memcheck.rs  parameter.rs  prg.rs  random_oracles.rs  rijndael_32.rs  universal_hashing.rs  utils.rs  vc.rs  vole.rs  witness.rs  x86_simd_parameters.rs  zk_constraints.rs
src/fields/: byte_commitments.rs  field_commitment.rs  large_fields.rs  mod.rs  small_fields.rs  x86_simd_large_fields.rs
src/prover/: aes.rs  byte_commitments.rs  encryption.rs  field_commitment.rs  key_expansion.rs  mod.rs  owf_constraints.rs
src/verifier/: aes.rs  encryption.rs  key_expansion.rs  mod.rs  owf_constraints.rs  vole_commitments.rs  zk_constraints.rs
tests/: memcheck.rs  nist.rs
tests/data/: AesExtendedWitness.json  AesProve.json  EmProve.json  FaestProve.json  bavac_com.json  bavac_em.json  reduced_PQCsignKAT_faest_128f.rsp  reduced_PQCsignKAT_faest_128s.rsp  reduced_PQCsignKAT_faest_192f.rsp  reduced_PQCsignKAT_faest_192s.rsp  reduced_PQCsignKAT_faest_256f.rsp  reduced_PQCsignKAT_faest_256s.rsp  reduced_PQCsignKAT_faest_em_128f.rsp  reduced_PQCsignKAT_faest_em_128s.rsp  reduced_PQCsignKAT_faest_em_192f.rsp  reduced_PQCsignKAT_faest_em_192s.rsp  reduced_PQCsignKAT_faest_em_256f.rsp  reduced_PQCsignKAT_faest_em_256s.rsp
valgrind-bindings/: Cargo.toml  build.rs  wrapper.c  wrapper.h
valgrind-bindings/src/: bindings_fallback.rs  lib.rs
