[package]
name = "faest"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
serde = { version = "1", optional = true, default-features = false, features = [
  "derive",
] }
sha3 = "0.10.8"
signature = { version = "2.2.0", default-features = false, features = [
  "alloc",
] }
subtle = { version = "2.6", features = ["const-generics"] }
generic-array = { version = "1", features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", optional = true, default-features = false, features = [
  "derive",
] }
either = { version = "1", default-features = false }
paste = "1"

[dev-dependencies]
serde_derive = "1.0.200"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
criterion = "0.5.1"
rand = { version = "0.8", features = ["small_rng"] }
nist-pqc-seeded-rng = "0.2"
hex = "0.4.3"
rand_chacha = { version = "0.3" }

[features]
default = ["zeroize", "randomized-signer", "serde"]
zeroize = ["dep:zeroize", "aes/zeroize", "ctr/zeroize"]
randomized-signer = ["signature/rand_core"]
serde = ["dep:serde", "generic-array/serde"]

[[bench]]
name = "benchmark_faest_rs"
harness = false
test = false

[[example]]
name = "simple"
required-features = ["randomized-signer"]

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
strip = false
