[package]
name = "faest"
description = "Pure Rust implementation of the FAEST post-quantum secure digital signature scheme"
version = "0.0.1"
authors = [
  "Sebastian Ramacher <sebastian.ramacher@ait.ac.at>",
  "Clément Naves <clement.naves@ait.ac.at>",
]
homepage = "https://faest.info"
repository = "https://github.com/ait-crypto/faest-rs"
license = "MIT"
edition = "2021"
rust-version = "1.76"
keywords = ["signatures", "FAEST"]
categories = ["cryptography"]
exclude = ["tests/data/*.json", "tests/data/PQCsignKAT_*.rsp"]

[dependencies]
aes = "0.8"
ctr = "0.9"
serde = { version = "1", optional = true, default-features = false, features = [
  "derive",
] }
sha3 = "0.10"
signature = { version = "2", default-features = false, features = ["alloc"] }
generic-array = { version = "1", features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", optional = true, default-features = false, features = [
  "derive",
] }
paste = "1"

[dev-dependencies]
criterion = "0.5"
generic-tests = "0.1"
hex = "0.4"
nist-pqc-seeded-rng = { version = "0.2", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["zeroize", "randomized-signer"]
zeroize = ["dep:zeroize", "aes/zeroize", "ctr/zeroize"]
randomized-signer = ["signature/rand_core"]
serde = ["dep:serde", "generic-array/serde"]

[[bench]]
name = "bench"
required-features = ["randomized-signer"]
harness = false
test = false

[[example]]
name = "simple"
required-features = ["randomized-signer"]

[[test]]
name = "nist"
required-features = ["randomized-signer"]

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
strip = false

[package.metadata.docs.rs]
all-features = true
