[package]
name = "faest"
description = "Pure Rust implementation of the FAEST post-quantum secure digital signature scheme"
version = "0.2.1"
authors = [
  "Sebastian Ramacher <sebastian.ramacher@ait.ac.at>",
  "Clément Naves <clement.naves@ait.ac.at>",
  "Alessandro Colombo <alessandro.colombo@ait.ac.at>",
]
homepage = "https://faest.info"
repository = "https://github.com/ait-crypto/faest-rs"
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.85"
keywords = ["signatures", "FAEST", "post-quantum"]
categories = ["cryptography"]
exclude = ["tests/data/*.json", "tests/data/PQCsignKAT_*.rsp"]

[dependencies]
aes = "0.8"
ctr = "0.9"
serde = { version = "1", optional = true, default-features = false, features = [
  "derive",
] }
sha3 = "0.10"
signature = { version = "2", default-features = false, features = ["alloc"] }
generic-array = { version = "1", features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", optional = true }
zeroize = { version = "1.2", optional = true, default-features = false, features = [
  "derive",
] }
paste = "1"
itertools = { version = "0.14", default-features = false, features = [
  "use_std",
] }
bit-set = { version = "0.8.0", default-features = false, features = ["std"] }
cfg-if = "1.0.0"
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.6"
generic-tests = "0.1"
hex = "0.4"
nist-pqc-seeded-rng = { version = "0.2.1", default-features = false }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["zeroize", "randomized-signer", "opt-simd"]
# zeroize secret keys
zeroize = ["dep:zeroize", "aes/zeroize", "ctr/zeroize"]
# implement randomized signer interfaces of the signature crate
randomized-signer = ["signature/rand_core"]
# provide serialization via serde
serde = ["dep:serde", "generic-array/serde"]
# enable SIMD optimization implementations
opt-simd = []
# provide C interface via cargo-c
capi = ["dep:rand", "dep:libc", "dep:zeroize"]

[[bench]]
name = "faest"
path = "benches/bench.rs"
required-features = ["randomized-signer"]
harness = false
test = false

[[example]]
name = "simple"
required-features = ["randomized-signer"]

[[test]]
name = "nist"
required-features = ["randomized-signer"]

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
strip = false

[package.metadata.docs.rs]
all-features = true
