[package]
name = "faest"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
aes = "0.8.4"
cipher = "=0.5.0-pre.4"
ctr = "0.9.2"
hex = "0.4.3"
nist-pqc-seeded-rng = "0.1.2"
sha3 = "0.10.8"
signature = "2.2.0"
subtle = { version = "2.6", features = ["const-generics"] }
typenum = "1.17.0"
generic-array = { version = "1", features = ["alloc"] }
generic_array_0_14 = { version = "0.14", package = "generic-array" }
stacker = "0.1.17"

[dev-dependencies]
num-bigint = "0.4.4"
serde_derive = "1.0.200"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
criterion = "0.5.1"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "benchmark_faest_rs"
harness = false

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "faest"
path = "src/lib.rs"
